# tpPOO

./: CMakeLists.txt  README.md  Terminal.cpp  Terminal.h  aparelho.cpp  aparelho.h  curses.h  home.cpp  home.h  main.cpp  processor.cpp  processor.h  props.cpp  props.h  sensor.cpp  sensor.h  stuff.cpp  stuff.h  zone.cpp  zone.h
